Squashed commit of the following:
commit 4b6351200b9f7e7bb75b780c46042afbed3359f3
Merge: a3946bb 47dc117
Author: Alex <18037145+salcodes1@users.noreply.github.com>
Date:   Tue Dec 28 22:09:36 2021 +0200

    Merge branch 'Mauler125:pylon' into pylon

commit a3946bb5ce4655665a763aeb3c2b016215bfa805
Author: Alex <18037145+salcodes1@users.noreply.github.com>
Date:   Tue Dec 28 22:07:02 2021 +0200

    Pylon C++ implementation actually working now

commit 00cd76f7b21476e054d3ead4a4c8d507f391c963
Author: Alex <18037145+salcodes1@users.noreply.github.com>
Date:   Tue Dec 28 03:45:41 2021 +0200

    Fixed post requests not using provided route

commit 2f2d01713fd38861f0e674641bf14b6afd25ecc6
Author: Alex <18037145+salcodes1@users.noreply.github.com>
Date:   Tue Dec 28 03:44:20 2021 +0200

    added get private game server info route

commit b53b89d31a7201ac594abf16dd7c00134bb5a132
Merge: 433f14c c8ec95b
Author: Alex <18037145+salcodes1@users.noreply.github.com>
Date:   Tue Dec 28 03:32:14 2021 +0200

    Merge branch 'pylon' into indev

commit 433f14c352a0ae366cff2cbe03753b2198a77848
Author: Alex <18037145+salcodes1@users.noreply.github.com>
Date:   Tue Dec 28 03:31:33 2021 +0200

    partial commit

commit c8ec95bd37ed0c3e16090ed0a15808bda6a2ee99
Author: Alex <18037145+salcodes1@users.noreply.github.com>
Date:   Tue Dec 28 03:26:44 2021 +0200

    Added backbone and some of the routes for r5net-ms (now Pylon) interactions

--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -40,7 +40,7 @@
     <ClCompile Include="engine\sys_dll2.cpp" />
     <ClCompile Include="engine\sys_utils.cpp" />
     <ClCompile Include="gameui\IConsole.cpp" />
-    <ClCompile Include="gameui\IBrowser.cpp" />
+    <ClCompile Include="IDevPallete.cpp" />
     <ClCompile Include="inputsystem\inputsystem.cpp" />
     <ClCompile Include="launcher\IApplication.cpp" />
     <ClCompile Include="mathlib\adler32.cpp" />
@@ -133,7 +133,7 @@
     <ClInclude Include="engine\sys_dll2.h" />
     <ClInclude Include="engine\sys_utils.h" />
     <ClInclude Include="gameui\IConsole.h" />
-    <ClInclude Include="gameui\IBrowser.h" />
+    <ClInclude Include="IDevPalette.h" />
     <ClInclude Include="inputsystem\ButtonCode.h" />
     <ClInclude Include="inputsystem\inputsystem.h" />
     <ClInclude Include="launcher\IApplication.h" />
@@ -142,8 +142,8 @@
     <ClInclude Include="mathlib\IceKey.H" />
     <ClInclude Include="mathlib\parallel_for.h" />
     <ClInclude Include="mathlib\vector.h" />
+    <ClInclude Include="networksystem\net_structs.h" />
     <ClInclude Include="networksystem\r5net.h" />
-    <ClInclude Include="networksystem\serverlisting.h" />
     <ClInclude Include="networksystem\sm_protocol.h" />
     <ClInclude Include="public\include\memaddr.h" />
     <ClInclude Include="public\include\bansystem.h" />
